# bib

./: .gitignore  Cargo.toml  README.md  flake.nix  test.bib
.cargo/: config.toml
docs/: cli.md  pipeline.md
src/: cli.rs  item.rs  main.rs  resolver.rs
src/identifier/: arxiv.rs  doi.rs  embedded.rs  mod.rs  usenix.rs
src/translator/: doi.rs  mod.rs
tests/: embedded.rs  fetch.rs
