[package]
name = "bib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.99", default-features = false }
biblatex = "0.10.0"
chrono = "0.4.41"
citeworks-csl = "0.3.0"
clap = { version = "4.5.45", default-features = false, features = ["derive", "color", "std", "help"] }
indicatif = "0.18.0"
once_cell = "1.21.3"
percent-encoding = "2.3.1"
regex = "1.11.1"
serde_json = "1.0.142"
ureq = "3.1.0"
url = "2.5.4"
owo-colors = "4.1.0"

[dev-dependencies]
proptest = "1.5.0"
tempfile = "3.12.0"
assert_cmd = "2.0"
predicates = "3.1"
strip-ansi-escapes = "0.2.0"
ureq = "3.1.0"
